stages/stage8/k8s/infra/opa/k8spspallowprivilegeescalation-ct.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspallowprivilegeescalation
spec:
  crd:
    spec:
      names:
        kind: K8sPSPAllowPrivilegeEscalation
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspallowprivilegeescalation

        violation[msg] {
            container := input.review.object.spec.containers[_]
            container.securityContext.allowPrivilegeEscalation == true
            msg := sprintf("Container %v allows privilege escalation", [container.name])
        }
