stages/stage8/k8s/infra/opa/k8spspallowprivilegeescalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalation
metadata:
  name: deny-privilege-escalation
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["apollo11-apps", "apollo11-infra", "apollo11-ui"]
