stages/stage8/k8s/infra/opa/k8spspprivilegedcontainer.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: deny-privileged-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["apollo11-apps", "apollo11-infra", "apollo11-ui"]
